Removed ScreeningSeat, renamed HallSeat to Seat and added relations between Ticket and Screening and Seat